--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,10 @@
 
 body {
   font-family: sniglet, sans-serif;
+  position: relative;
+  min-height: 100%;
+  min-height: 100vh;
 }
-
 
 header {
   background-color: #18b2ff;
@@ -24,11 +26,33 @@ header {
   color: white;
 }
 
+ /* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+} 
+
+ /* If on mobile turn make it fit or something lol - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 500px) {
+  .column {
+    width: 100%;
+  }
+} 
+
 /* Create two columns/boxes that floats next to each other */
 nav {
   float: left;
   width: 15%;
-  height: 700px; /* only for demonstration, should be removed */
+  min-height: 100%;
+  min-height: 100vh;
   background: #ccc;
   padding: 20px;
 }
@@ -38,13 +62,53 @@ nav ul {
   list-style-type: none;
   padding: 0;
 }
-
-article {
+.sidenav {
+  position: fixed;
   float: left;
-  padding: 20px;
+  width: 0;
+  min-height: 100%;
+  min-height: 100vh;
+  background: #ccc;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 22px;
+  color: #000000;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+#main {
+  transition: margin-left .5s;
+}
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 4px;}
+}
+article {
+  margin: auto 0;
+  float: left;
+  padding: 20px 0px 0px 100px;
   width: 70%;
   background-color: #f1f1f1;
-  height: 700px; /* only for demonstration, should be removed */
+  height: 700px;
 }
 
 /* Clear floats after the columns */
@@ -56,10 +120,37 @@ section::after {
 
 /* Style the footer */
 footer {
+  position: absolute;
+  right: 0;bottom:0;left:0;
   background-color: #777;
   padding: 10px;
   text-align: center;
   color: white;
+}
+
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #353535;
+    font-size: 3rem;
+    color: #fff;
+    box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem, rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
+    height: 336px;
+    width: 348px;
+    border-radius: 4px;
+    transition: all 500ms;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.card:hover {
+    box-shadow: rgba(2, 8, 20, 0.1) 0px 0.35em 1.175em, rgba(2, 8, 20, 0.08) 0px 0.175em 0.5em;
+    transform: translateY(-3px) scale(1.1);
 }
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
