--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,3 @@
-<!doctype html>
-
-<html>
-
-<head>
-<title> Hey guys!! </title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
 * {
   box-sizing: border-box;
 }
@@ -20,7 +11,7 @@ body {
 
 header {
   background-color: #18b2ff;
-  padding: 30px;
+  padding: 24px;
   text-align: center;
   font-size: 35px;
   color: white;
@@ -62,9 +53,11 @@ nav ul {
   list-style-type: none;
   padding: 0;
 }
+
 .sidenav {
   position: fixed;
   float: left;
+  left: 0;
   width: 0;
   min-height: 100%;
   min-height: 100vh;
@@ -95,6 +88,10 @@ nav ul {
   margin-left: 50px;
 }
 
+div.sticky {
+  position: sticky;
+}
+
 #main {
   transition: margin-left .5s;
 }
@@ -118,7 +115,8 @@ section::after {
 
 /* Style the footer */
 footer {
-  position: absolute;
+  position: fixed;
+  margin-top: auto;
   right: 0;bottom:0;left:0;
   background-color: #777;
   padding: 10px;
