--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ header {
   left: 0;
   width: 0;
   min-height: 700px;
-  max-height: 100%;
+  max-height: 300vh;
   background: #ccc;
   overflow-x: hidden;
   transition: 0.5s;
